Revert "added recommended annotations/removed redundant cast"
This reverts commit e62630397f8630b6b6085fda13c1bd90024f1f33.